--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "electron": "^34.2.0"
   },
   "dependencies": {
-    "fs-extra": "^11.3.0"
+    "fast-xml-parser": "^4.5.1",
+    "fs-extra": "^11.3.0",
+    "path": "^0.12.7"
   }
 }
