--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple Electron app to rename PDF files based on names in and xml files",
   "main": "main.js",
   "scripts": {
-    "dev": "electron .",
+    "dev": "npx electronmon .",
     "start": "electron-forge start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
