--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "fast-xml-parser": "^4.5.1",
     "fs-extra": "^11.3.0",
+    "iconv-lite": "^0.6.3",
     "path": "^0.12.7",
     "pino": "^9.6.0"
   },
